<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button2"
        style="@style/RoundedCornerButton"
        android:layout_width="115dp"
        android:layout_height="57dp"
        android:layout_weight="1"
        android:text="@string/leader"
        tools:layout_editor_absoluteX="505dp"
        tools:layout_editor_absoluteY="295dp" />

    <Button
        android:id="@+id/button3"
        style="@style/RoundedCornerButton"
        android:layout_width="113dp"
        android:layout_height="56dp"
        android:layout_marginEnd="276dp"
        android:layout_weight="1"
        android:text="@string/gamer"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        tools:layout_editor_absoluteY="296dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="384dp"
        android:layout_height="27dp"
        android:layout_marginEnd="172dp"
        android:layout_weight="1"
        android:fontFamily="@font/comfortaa"
        android:text="@string/rule"
        android:textColor="#1A1A1A"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="49dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/comfortaa"
        android:text="@string/rule1"
        android:textColor="#1A1A1A"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="116dp" />

    <CheckBox
        android:id="@+id/checkBox"
        style="@android:style/Widget.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="@string/check_info"
        android:textColor="#1A1A1A"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="234dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
